--- a/requirements.txt
+++ b/requirements.txt
@@ -23,7 +23,7 @@ idna==3.3
 iniconfig==1.1.1
 itsdangerous==2.0.1
 Jinja2==3.0.2
-jsonschema==4.1.0
+jsonschema
 jwt==1.3.1
 makefun==1.12.1
 MarkupSafe==2.0.1
